--- a/loc/af.html
+++ b/loc/af.html
@@ -1,1 +1,323 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="List of African countries with population and subregion information.">
+	<title>Countries in Africa</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		.country-item img {
+			width: 100%;
+			height: auto;
+			transition: opacity 0.3s;
+		}
+		.country-item a:hover img {
+			opacity: 0.8;
+		}
+		.country-item {
+			margin-bottom: 20px;
+		}
+		.country-item p {
+			text-align: center;
+			margin: 0;
+		}
+		.table {
+			margin-top: 20px;
+		}
+	</style>
+</head>
+<body>
+	<header>
+		<div class="container">
+			<h1 class="my-4">Countries in Africa (54 Countries)</h1>
+			<p>Total Population: 1.3 billion (as of 2021)</p>
+			<p>Africa is the second-largest and second-most populous continent, with a rich diversity of cultures, languages, and ecosystems.</p>
+		</div>
+	</header>
+	<main>
+		<div class="container">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Country</th>
+						<th>Flag</th>
+						<th>Population (2020)</th>
+						<th>Subregion</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>Nigeria</td>
+						<td><img src="/Countries/ng.svg" alt="Flag of Nigeria"></td>
+						<td>206,139,589</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Ethiopia</td>
+						<td><img src="/Countries/et.svg" alt="Flag of Ethiopia"></td>
+						<td>114,963,588</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>Egypt</td>
+						<td><img src="/Countries/eg.svg" alt="Flag of Egypt"></td>
+						<td>102,334,404</td>
+						<td>Northern Africa</td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td>Democratic Republic of the Congo</td>
+						<td><img src="/Countries/cd.svg" alt="Flag of DR Congo"></td>
+						<td>89,561,403</td>
+						<td>Middle Africa</td>
+					</tr>
+					<tr>
+						<td>5</td>
+						<td>Tanzania</td>
+						<td><img src="/Countries/tz.svg" alt="Flag of Tanzania"></td>
+						<td>59,734,218</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>6</td>
+						<td>South Africa</td>
+						<td><img src="/Countries/za.svg" alt="Flag of South Africa"></td>
+						<td>59,308,690</td>
+						<td>Southern Africa</td>
+					</tr>
+					<tr>
+						<td>7</td>
+						<td>Kenya</td>
+						<td><img src="/Countries/ke.svg" alt="Flag of Kenya"></td>
+						<td>53,771,296</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>8</td>
+						<td>Uganda</td>
+						<td><img src="/Countries/ug.svg" alt="Flag of Uganda"></td>
+						<td>45,741,007</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>9</td>
+						<td>Sudan</td>
+						<td><img src="/Countries/sd.svg" alt="Flag of Sudan"></td>
+						<td>43,849,260</td>
+						<td>Northern Africa</td>
+					</tr>
+					<tr>
+						<td>10</td>
+						<td>Algeria</td>
+						<td><img src="/Countries/dz.svg" alt="Flag of Algeria"></td>
+						<td>43,851,044</td>
+						<td>Northern Africa</td>
+					</tr>
+					<tr>
+						<td>11</td>
+						<td>Morocco</td>
+						<td><img src="/Countries/ma.svg" alt="Flag of Morocco"></td>
+						<td>36,910,560</td>
+						<td>Northern Africa</td>
+					</tr>
+					<tr>
+						<td>12</td>
+						<td>Angola</td>
+						<td><img src="/Countries/ao.svg" alt="Flag of Angola"></td>
+						<td>32,866,272</td>
+						<td>Middle Africa</td>
+					</tr>
+					<tr>
+						<td>13</td>
+						<td>Ghana</td>
+						<td><img src="/Countries/gh.svg" alt="Flag of Ghana"></td>
+						<td>31,072,940</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>14</td>
+						<td>Mozambique</td>
+						<td><img src="/Countries/mz.svg" alt="Flag of Mozambique"></td>
+						<td>31,255,435</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>15</td>
+						<td>Madagascar</td>
+						<td><img src="/Countries/mg.svg" alt="Flag of Madagascar"></td>
+						<td>27,691,018</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>16</td>
+						<td>Ivory Coast</td>
+						<td><img src="/Countries/ci.svg" alt="Flag of Ivory Coast"></td>
+						<td>26,378,274</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>17</td>
+						<td>Cameroon</td>
+						<td><img src="/Countries/cm.svg" alt="Flag of Cameroon"></td>
+						<td>26,545,863</td>
+						<td>Middle Africa</td>
+					</tr>
+					<tr>
+						<td>18</td>
+						<td>Niger</td>
+						<td><img src="/Countries/ne.svg" alt="Flag of Niger"></td>
+						<td>24,206,644</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>19</td>
+						<td>Burkina Faso</td>
+						<td><img src="/Countries/bf.svg" alt="Flag of Burkina Faso"></td>
+						<td>20,903,273</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>20</td>
+						<td>Mali</td>
+						<td><img src="/Countries/ml.svg" alt="Flag of Mali"></td>
+						<td>20,250,833</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>21</td>
+						<td>Malawi</td>
+						<td><img src="/Countries/mw.svg" alt="Flag of Malawi"></td>
+						<td>19,129,952</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>22</td>
+						<td>Zambia</td>
+						<td><img src="/Countries/zm.svg" alt="Flag of Zambia"></td>
+						<td>18,383,955</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>23</td>
+						<td>Senegal</td>
+						<td><img src="/Countries/sn.svg" alt="Flag of Senegal"></td>
+						<td>16,743,927</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>24</td>
+						<td>Chad</td>
+						<td><img src="/Countries/td.svg" alt="Flag of Chad"></td>
+						<td>16,425,864</td>
+						<td>Middle Africa</td>
+					</tr>
+					<tr>
+						<td>25</td>
+						<td>Somalia</td>
+						<td><img src="/Countries/so.svg" alt="Flag of Somalia"></td>
+						<td>15,893,222</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>26</td>
+						<td>Zimbabwe</td>
+						<td><img src="/Countries/zw.svg" alt="Flag of Zimbabwe"></td>
+						<td>14,862,924</td>
+						<td>Southern Africa</td>
+					</tr>
+					<tr>
+						<td>27</td>
+						<td>Guinea</td>
+						<td><img src="/Countries/gn.svg" alt="Flag of Guinea"></td>
+						<td>13,132,795</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>28</td>
+						<td>South Sudan</td>
+						<td><img src="/Countries/ss.svg" alt="Flag of South Sudan"></td>
+						<td>11,193,725</td>
+						<td>Middle Africa</td>
+					</tr>
+					<tr>
+						<td>29</td>
+						<td>Rwanda</td>
+						<td><img src="/Countries/rw.svg" alt="Flag of Rwanda"></td>
+						<td>12,374,397</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>30</td>
+						<td>Benin</td>
+						<td><img src="/Countries/bj.svg" alt="Flag of Benin"></td>
+						<td>12,123,200</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>31</td>
+						<td>Burundi</td>
+						<td><img src="/Countries/bi.svg" alt="Flag of Burundi"></td>
+						<td>11,890,784</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>32</td>
+						<td>Tunisia</td>
+						<td><img src="/Countries/tn.svg" alt="Flag of Tunisia"></td>
+						<td>11,818,619</td>
+						<td>Northern Africa</td>
+					</tr>
+					<tr>
+						<td>33</td>
+						<td>Togo</td>
+						<td><img src="/Countries/tg.svg" alt="Flag of Togo"></td>
+						<td>8,278,724</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>34</td>
+						<td>Libya</td>
+						<td><img src="/Countries/ly.svg" alt="Flag of Libya"></td>
+						<td>6,871,292</td>
+						<td>Northern Africa</td>
+					</tr>
+					<tr>
+						<td>35</td>
+						<td>Sierra Leone</td>
+						<td><img src="/Countries/sl.svg" alt="Flag of Sierra Leone"></td>
+						<td>7,976,983</td>
+						<td>Western Africa</td>
+					</tr>
+					<tr>
+						<td>36</td>
+						<td>Eritrea</td>
+						<td><img src="/Countries/er.svg" alt="Flag of Eritrea"></td>
+						<td>3,546,421</td>
+						<td>Eastern Africa</td>
+					</tr>
+					<tr>
+						<td>37</td>
+						<td>Equatorial Guinea</td>
+						<td><img src="/Countries/gq.svg" alt="Flag of Equatorial Guinea"></td>
+						<td>1,402,985</td>
+						<td>Middle Africa</td>
+					</tr>
+					<tr>
+						<td>38</td>
+						<td>Djibouti</td>
+						<td><img src="/Countries/dj.svg" alt="Flag of Djibouti"></td>
+						<td>988,000</td>
+						<td>Eastern Africa</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</main>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
