--- a/loc/sa.html
+++ b/loc/sa.html
@@ -1,1 +1,141 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="List of South American countries with population and subregion information.">
+	<title>Countries in South America</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+	<style>
+		.country-item img {
+			width: 100%;
+			height: auto;
+			transition: opacity 0.3s;
+		}
+		.country-item a:hover img {
+			opacity: 0.8;
+		}
+		.country-item {
+			margin-bottom: 20px;
+		}
+		.country-item p {
+			text-align: center;
+			margin: 0;
+		}
+		.table {
+			margin-top: 20px;
+		}
+	</style>
+</head>
+<body>
+	<header>
+		<div class="container">
+			<h1 class="my-4">Countries in South America (12 Countries)</h1>
+			<p>Total Population: 430 million (as of 2021)</p>
+			<p>South America is home to a diverse range of cultures, natural landscapes, and economies.</p>
+		</div>
+	</header>
+	<main>
+		<div class="container">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>#</th>
+						<th>Country</th>
+						<th>Flag</th>
+						<th>Population (2020)</th>
+						<th>Subregion</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>1</td>
+						<td>Brazil</td>
+						<td><img src="/Countries/br.svg" alt="Flag of Brazil"></td>
+						<td>212,559,417</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>2</td>
+						<td>Colombia</td>
+						<td><img src="/Countries/co.svg" alt="Flag of Colombia"></td>
+						<td>50,882,891</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>3</td>
+						<td>Argentina</td>
+						<td><img src="/Countries/ar.svg" alt="Flag of Argentina"></td>
+						<td>45,376,763</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>4</td>
+						<td>Peru</td>
+						<td><img src="/Countries/pe.svg" alt="Flag of Peru"></td>
+						<td>32,971,854</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>5</td>
+						<td>Venezuela</td>
+						<td><img src="/Countries/ve.svg" alt="Flag of Venezuela"></td>
+						<td>28,435,940</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>6</td>
+						<td>Chile</td>
+						<td><img src="/Countries/cl.svg" alt="Flag of Chile"></td>
+						<td>19,116,201</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>7</td>
+						<td>Ecuador</td>
+						<td><img src="/Countries/ec.svg" alt="Flag of Ecuador"></td>
+						<td>17,643,054</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>8</td>
+						<td>Bolivia</td>
+						<td><img src="/Countries/bo.svg" alt="Flag of Bolivia"></td>
+						<td>11,673,021</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>9</td>
+						<td>Paraguay</td>
+						<td><img src="/Countries/py.svg" alt="Flag of Paraguay"></td>
+						<td>7,132,538</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>10</td>
+						<td>Uruguay</td>
+						<td><img src="/Countries/uy.svg" alt="Flag of Uruguay"></td>
+						<td>3,473,730</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>11</td>
+						<td>Guyana</td>
+						<td><img src="/Countries/gy.svg" alt="Flag of Guyana"></td>
+						<td>786,552</td>
+						<td>South America</td>
+					</tr>
+					<tr>
+						<td>12</td>
+						<td>Suriname</td>
+						<td><img src="/Countries/sr.svg" alt="Flag of Suriname"></td>
+						<td>586,632</td>
+						<td>South America</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</main>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
