--- a/loc/an.html
+++ b/loc/an.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snowfall Effect</title>
+    <title>Antartica - Extreme Conditions</title>
     <style>
         body {
             margin: 0;
