--- a/index.html
+++ b/index.html
@@ -1,164 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-body {font-family: "Lato", sans-serif}
-.mySlides {display: none}
-</style>
+    <title>Holiday Ownership</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <style>
+        body {font-family: "Lato", sans-serif}
+        .mySlides {display: none}
+    </style>
 </head>
 <body>
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-black w3-card">
-    <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
-    <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TOUR</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
-    <div class="w3-dropdown-hover w3-hide-small">
-      <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
-      <div class="w3-dropdown-content w3-bar-block w3-card-4">
-        <a href="#" class="w3-bar-item w3-button">Merchandise</a>
-        <a href="#" class="w3-bar-item w3-button">Extras</a>
-        <a href="#" class="w3-bar-item w3-button">Media</a>
-      </div>
+    <div class="w3-bar w3-black w3-card">
+        <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+        <a href="#band" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BAND</a>
+        <a href="#tour" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TOUR</a>
+        <a href="#contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+        <div class="w3-dropdown-hover w3-hide-small">
+            <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>
+            <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                <a href="#" class="w3-bar-item w3-button">Merchandise</a>
+                <a href="#" class="w3-bar-item w3-button">Extras</a>
+                <a href="#" class="w3-bar-item w3-button">Media</a>
+            </div>
+        </div>
+        <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
     </div>
-    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
-  </div>
 </div>
 
 <!-- Navbar on small screens -->
 <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-  <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
-  <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
-  <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
-  <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
+    <a href="#band" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">BAND</a>
+    <a href="#tour" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">TOUR</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
+    <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
 </div>
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
 
-  <!-- Automatic Slideshow Images -->
-  <div class="mySlides w3-display-container w3-center">
-    <img src="https://loremflickr.com/1080/1080/vacations" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Los Angeles</h3>
-      <p><b>We had the best time playing at Venice Beach!</b></p>   
-    </div>
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img src="https://loremflickr.com/1080/1080/vacations" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>New York</h3>
-      <p><b>The atmosphere in New York is lorem ipsum.</b></p>    
-    </div>
-  </div>
-  <div class="mySlides w3-display-container w3-center">
-    <img src="https://loremflickr.com/1080/1080/vacations" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>Chicago</h3>
-      <p><b>Thank you, Chicago - A night we won't forget.</b></p>    
-    </div>
-  </div>
-
-  <!-- The Band Section -->
-  <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
-    <h2 class="w3-wide">THE BAND</h2>
-    <p class="w3-opacity"><i>We love music</i></p>
-    <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <div class="w3-row w3-padding-32">
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
-      </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
-      </div>
-      <div class="w3-third">
-        <p>Name</p>
-        <img src="https://loremflickr.com/200/200/vacations" class="w3-round" alt="Band Member" style="width:60%">
-      </div>
-    </div>
-  </div>
-
-  <!-- The Tour Section -->
-  <div class="w3-black" id="tour">
-    <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-      <h2 class="w3-wide w3-center">TOUR DATES</h2>
-      <p class="w3-opacity w3-center"><i>Remember to book your tickets!</i></p>
-      <table class="w3-table w3-striped w3-white">
-        <tr>
-          <th>DATE</th>
-          <th>CITY</th>
-          <th>VENUE</th>
-        </tr>
-        <tr>
-          <td>15 APRIL 2024</td>
-          <td>LOS ANGELES</td>
-          <td>VENICE BEACH</td>
-        </tr>
-        <tr>
-          <td>20 APRIL 2024</td>
-          <td>NEW YORK</td>
-          <td>CENTRAL PARK</td>
-        </tr>
-        <tr>
-          <td>25 APRIL 2024</td>
-          <td>CHICAGO</td>
-          <td>MILLENNIUM PARK</td>
-        </tr>
-      </table>
-    </div>
-  </div>
-
-  <!-- Contact Section -->
-  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
-    <h2 class="w3-wide w3-center">CONTACT</h2>
-    <p class="w3-opacity w3-center"><i>We'd love to hear from you!</i></p>
-    <form action="https://www.w3schools.com/action_page.php">
-      <div class="w3-row w3-section">
-        <div class="w3-col m6 w3-center">
-          <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+    <!-- Automatic Slideshow Images -->
+    <div class="mySlides w3-display-container w3-center">
+        <img src="https://loremflickr.com/1080/1080/vacations" style="width:100%">
+        <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+            <h3 class="holiday-title">Los Angeles</h3>
+            <p><b>We had the best time playing at Venice Beach!</b></p>
         </div>
-        <div class="w3-col m6 w3-center">
-          <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
+    </div>
+    <div class="mySlides w3-display-container w3-center">
+        <img src="https://loremflickr.com/1080/1080/vacations" style="width:100%">
+        <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+            <h3 class="holiday-title">New York</h3>
+            <p><b>The atmosphere in New York is lorem ipsum.</b></p>
         </div>
-      </div>
-      <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-      <button class="w3-button w3-black w3-section w3-padding" type="submit">SEND MESSAGE</button>
-    </form>
-  </div>
+    </div>
+    <div class="mySlides w3-display-container w3-center">
+        <img src="https://loremflickr.com/1080/1080/vacations" style="width:100%">
+        <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+            <h3 class="holiday-title">Chicago</h3>
+            <p><b>Thank you, Chicago - A night we won't forget.</b></p>
+        </div>
+    </div>
 
-  <!-- Footer -->
-  <footer class="w3-center w3-black w3-padding-64">
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">W3.CSS</a></p>
-  </footer>
+    <!-- The Band Section -->
+    <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="band">
+        <h2 class="w3-wide">THE BAND</h2>
+        <p class="w3-opacity"><i>We love music</i></p>
+        <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="w3-row w3-padding-32">
+            <div class="w3-third">
+                <p>Name</p>
+                <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
+            </div>
+            <div class="w3-third">
+                <p>Name</p>
+                <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
+            </div>
+            <div class="w3-third">
+                <p>Name</p>
+                <img src="https://loremflickr.com/200/200/vacations" class="w3-round" alt="Band Member" style="width:60%">
+            </div>
+        </div>
+        <div class="w3-row w3-padding-32">
+            <div class="w3-third">
+                <p>Name</p>
+                <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
+            </div>
+            <div class="w3-third">
+                <p>Name</p>
+                <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
+            </div>
+            <div class="w3-third">
+                <p>Name</p>
+                <img src="https://loremflickr.com/200/200/vacations" class="w3-round" alt="Band Member" style="width:60%">
+            </div>
+        </div>
+    </div>
 
-  <script>
-  // Automatic Slideshow - change image every 4 seconds
-  var myIndex = 0;
-  carousel();
+    <!-- The Tour Section -->
+    <div class="w3-black" id="tour">
+        <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+            <h2 class="w3-wide w3-center">OUR BLACKOUT DATES</h2>
+            <p class="w3-opacity w3-center"><i>Remember these dates!</i></p>
+            <table class="w3-table w3-striped w3-white">
+                <tr>
+                    <th>DATES</th>
+                </tr>
+                <tr>
+                    <td>20 DECEMBER to 5 JANUARY</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 
-  function carousel() {
-    var i;
-    var x = document.getElementsByClassName("mySlides");
-    for (i = 0; i < x.length; i++) {
-      x[i].style.display = "none";  
+    <!-- Contact Section -->
+    <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="contact">
+        <h2 class="w3-wide w3-center">CONTACT</h2>
+        <p class="w3-opacity w3-center"><i>We'd love to hear from you!</i></p>
+        <form action="https://www.w3schools.com/action_page.php">
+            <div class="w3-row w3-section">
+                <div class="w3-col m6 w3-center">
+                    <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+                </div>
+                <div class="w3-col m6 w3-center">
+                    <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
+                </div>
+            </div>
+            <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+            <button type="submit" class="w3-button w3-black w3-section w3-padding">SEND MESSAGE</button>
+        </form>
+    </div>
+
+</div>
+
+<script>
+    // Random holiday titles
+    const holidayTitles = [
+        "Winter Wonderland",
+        "Tropical Escape",
+        "Festive Season",
+        "Holiday Magic",
+        "New Year Bliss",
+        "Merry & Bright",
+        "Cozy Retreat",
+        "Joyful Gatherings",
+        "Festive Feasts",
+        "Season's Greetings"
+    ];
+
+    function changeHolidayTitle() {
+        const titles = document.querySelectorAll('.holiday-title');
+        titles.forEach(title => {
+            title.innerText = holidayTitles[Math.floor(Math.random() * holidayTitles.length)];
+        });
     }
-    myIndex++;
-    if (myIndex > x.length) {myIndex = 1}    
-    x[myIndex-1].style.display = "block";  
-    setTimeout(carousel, 4000); // Change image every 4 seconds
-  }
-  </script>
+
+    // Change holiday titles every 3 seconds
+    setInterval(changeHolidayTitle, 3000);
+</script>
 
 </body>
 </html>
