--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
 
     <!-- Automatic Slideshow Images -->
     <div class="mySlides w3-display-container w3-center">
-        <img src="https://loremflickr.com/1080/1080/vacations" style="width:100%">
+        <img src="https://picsum.photos/600/600?random=1" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
             <h3 class="holiday-title">Los Angeles</h3>
             <p><b>We had the best time playing at Venice Beach!</b></p>
         </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
-        <img src="https://loremflickr.com/1080/1080/vacations" style="width:100%">
+        <img src="https://picsum.photos/600/600?random=2" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
             <h3 class="holiday-title">New York</h3>
             <p><b>The atmosphere in New York is lorem ipsum.</b></p>
         </div>
     </div>
     <div class="mySlides w3-display-container w3-center">
-        <img src="https://loremflickr.com/1080/1080/vacations" style="width:100%">
+        <img src="https://picsum.photos/600/600?random=3" style="width:100%">
         <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
             <h3 class="holiday-title">Chicago</h3>
             <p><b>Thank you, Chicago - A night we won't forget.</b></p>
@@ -76,29 +76,29 @@
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
                 <p>Name</p>
-                <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
+                <img src="https://picsum.photos/200/200?random=1" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
             </div>
             <div class="w3-third">
                 <p>Name</p>
-                <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
+                <img src="https://picsum.photos/200/200?random=2" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
             </div>
             <div class="w3-third">
                 <p>Name</p>
-                <img src="https://loremflickr.com/200/200/vacations" class="w3-round" alt="Band Member" style="width:60%">
+                <img src="https://picsum.photos/200/200?random=3" class="w3-round" alt="Band Member" style="width:60%">
             </div>
         </div>
         <div class="w3-row w3-padding-32">
             <div class="w3-third">
                 <p>Name</p>
-                <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
+                <img src="https://picsum.photos/200/200?random=4" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
             </div>
             <div class="w3-third">
                 <p>Name</p>
-                <img src="https://loremflickr.com/200/200/vacations" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
+                <img src="https://picsum.photos/200/200?random=5" class="w3-round w3-margin-bottom" alt="Band Member" style="width:60%">
             </div>
             <div class="w3-third">
                 <p>Name</p>
-                <img src="https://loremflickr.com/200/200/vacations" class="w3-round" alt="Band Member" style="width:60%">
+                <img src="https://picsum.photos/200/200?random=6" class="w3-round" alt="Band Member" style="width:60%">
             </div>
         </div>
     </div>
@@ -133,37 +133,56 @@
                 </div>
             </div>
             <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-            <button type="submit" class="w3-button w3-black w3-section w3-padding">SEND MESSAGE</button>
+            <button class="w3-button w3-black w3-section w3-padding" type="submit">SEND MESSAGE</button>
         </form>
     </div>
 
-</div>
+    <!-- Footer -->
+    <footer class="w3-center w3-black w3-padding-64">
+        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">W3.CSS</a></p>
+    </footer>
 
-<script>
-    // Random holiday titles
-    const holidayTitles = [
-        "Winter Wonderland",
-        "Tropical Escape",
-        "Festive Season",
-        "Holiday Magic",
-        "New Year Bliss",
-        "Merry & Bright",
-        "Cozy Retreat",
-        "Joyful Gatherings",
-        "Festive Feasts",
-        "Season's Greetings"
-    ];
+    <script>
+        // Automatic Slideshow - change image every 4 seconds
+        var myIndex = 0;
+        carousel();
 
-    function changeHolidayTitle() {
-        const titles = document.querySelectorAll('.holiday-title');
-        titles.forEach(title => {
-            title.innerText = holidayTitles[Math.floor(Math.random() * holidayTitles.length)];
-        });
-    }
+        function carousel() {
+            var i;
+            var x = document.getElementsByClassName("mySlides");
+            for (i = 0; i < x.length; i++) {
+                x[i].style.display = "none";  
+            }
+            myIndex++;
+            if (myIndex > x.length) {myIndex = 1}    
+            x[myIndex-1].style.display = "block";  
+            setTimeout(carousel, 4000); // Change image every 4 seconds
+        }
 
-    // Change holiday titles every 3 seconds
-    setInterval(changeHolidayTitle, 3000);
-</script>
+        // Random holiday titles
+        const holidayTitles = [
+            "Winter Wonderland",
+            "Tropical Escape",
+            "Festive Season",
+            "Holiday Magic",
+            "New Year Bliss",
+            "Merry & Bright",
+            "Cozy Retreat",
+            "Joyful Gatherings",
+            "Festive Feasts",
+            "Season's Greetings"
+        ];
+
+        function changeHolidayTitle() {
+            const titles = document.querySelectorAll('.holiday-title');
+            titles.forEach(title => {
+                title.innerText = holidayTitles[Math.floor(Math.random() * holidayTitles.length)];
+            });
+        }
+
+        // Change holiday titles every 3 seconds
+        setInterval(changeHolidayTitle, 3000);
+    </script>
 
 </body>
 </html>
