--- a/404.html
+++ b/404.html
@@ -68,7 +68,7 @@
 <body>
 	<div class="center-text">Welcome to Antarctica</div> <!-- Centered Text -->
 
-	<!-- Home Button -->
+	<!-- mopvup-7nubfi-rUjveq -->
 	<button class="home-button" onclick="window.location.href='/'">Home</button>
 
 	<script>
