--- a/i/d/index.html
+++ b/i/d/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h1 class="text-center">Domestic Holiday Destinations in India</h1>
+        <h1 class="titlebold text-center">Domestic Holiday Destinations in India</h1>
         <div class="row">
             <div class="col-md-4">
                 <div class="slider-item" style="background-image: url('https://loremflickr.com/800/400/golden_triangle');" onclick="location.href='i/d/golden_triangle.html'">
